# final

./: .gitignore
SegmentationClient/: CMakeLists.txt  IPCameraCapture.cpp  IPCameraCapture.h  SegmentationClient.cpp  SegmentationClient.h  create_video.py  main.cpp  rerun.sh  run.sh  segmentation_test.cpp  test.py  wraper.sh
moresimpler/: CMakeLists.txt  main.cpp  readme.md
simple/: CMakeLists.txt  Readme.md  SimpleSegmentationClient.cpp  SimpleSegmentationClient.h  main.cpp  setup.sh
